objects/AUP_User_Access__mdt.object
<CustomObject>
    <description>TFS AUP User Access</description>
    <fields>
        <fullName>Access_Name__c</fullName>
        <description>Permission Set Name or Group Developer Name</description>
        <inlineHelpText>Permission Set Name or Group Developer Name</inlineHelpText>
        <label>Access Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admin__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Admin</description>
        <inlineHelpText>Admin</inlineHelpText>
        <label>Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Agent</description>
        <inlineHelpText>Agent</inlineHelpText>
        <label>Agent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Application_Name__c</fullName>
        <description>Application Name</description>
        <inlineHelpText>Application Name</inlineHelpText>
        <label>Application Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Associate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Associate</description>
        <inlineHelpText>Associate</inlineHelpText>
        <label>Associate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <description>Business Unit</description>
        <inlineHelpText>Business Unit</inlineHelpText>
        <label>Business Unit - Deprecated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Group Indicator</description>
        <inlineHelpText>Group Indicator</inlineHelpText>
        <label>Group Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Manager</description>
        <inlineHelpText>Manager</inlineHelpText>
        <label>Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>QA</description>
        <inlineHelpText>QA</inlineHelpText>
        <label>QA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reporting__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Reporting</description>
        <inlineHelpText>Reporting</inlineHelpText>
        <label>Reporting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Team_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Team Lead</description>
        <inlineHelpText>Team Lead</inlineHelpText>
        <label>Team Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Function__c</fullName>
        <description>User Function</description>
        <inlineHelpText>User Function</inlineHelpText>
        <label>User Function - Deprecated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>AUP User Access</label>
    <pluralLabel>AUP User Access</pluralLabel>
</CustomObject>